--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 17:05:05 2018</p>
+         Last Run: Tue Nov 13 18:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Clear</td>
                         <td>2</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>66</td>
+                        <td>3</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>WNW</td>
-                        <td>1</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>70</td>
+                        <td>3</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>16</td>
                         <td>WNW</td>
-                        <td>1</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>3</td>
-                        <td>73</td>
+                        <td>4</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>1</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "3"
+                 "3",
+                 "3",
+                 "4"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "70",
-                 "73"
+                 "67",
+                 "71",
+                 "75"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "1",
-                 "1"
+                 "12",
+                 "10",
+                 "12"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 17:05:05 2018</p>
+         Last Run: Tue Nov 13 18:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -261,7 +261,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -273,7 +273,7 @@
                         <td>-7</td>
                         <td>-11</td>
                         <td>4</td>
-                        <td>71</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -285,7 +285,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "79",
-                 "71",
-                 "64"
+                 "88",
+                 "82",
+                 "74",
+                 "67"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 17:05:05 2018</p>
+         Last Run: Tue Nov 13 18:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,39 +479,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>51</td>
+                        <td>1</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>2</td>
-                        <td>48</td>
+                        <td>1</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>2</td>
-                        <td>45</td>
                         <td>1</td>
+                        <td>45</td>
+                        <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>51</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "1",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "48",
+                 "50",
+                 "47",
                  "45"
                ]
              },
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "46",
-                 "51"
+                 "63",
+                 "64",
+                 "66"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 17:05:05 2018</p>
+         Last Run: Tue Nov 13 18:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,11 +698,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>48</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -710,22 +710,22 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>69</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>49</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>5</td>
-                        <td>70</td>
+                        <td>4</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
+                        <td>11</td>
+                        <td>W</td>
                         <td>51</td>
                      </tr>
                   </tbody>
@@ -826,7 +826,7 @@
                "data":[
                  "4",
                  "4",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -835,9 +835,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "69",
-                 "70"
+                 "70",
+                 "71",
+                 "71"
                ]
              },
              {
@@ -846,8 +846,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "46",
                  "48",
-                 "49",
                  "51"
                ]
              }
