--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 18:05:05 2018</p>
+         Last Run: Tue Nov 13 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>2</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>21</td>
                         <td>WNW</td>
@@ -46,7 +46,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>16</td>
                         <td>WNW</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>W</td>
-                        <td>12</td>
+                        <td>WNW</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "71",
-                 "75"
+                 "66",
+                 "70",
+                 "73"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "12",
                  "10",
-                 "12"
+                 "13"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 18:05:05 2018</p>
+         Last Run: Tue Nov 13 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 18:05:05 2018</p>
+         Last Run: Tue Nov 13 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,23 +483,23 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>63</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>4</td>
                         <td>1</td>
-                        <td>47</td>
+                        <td>1</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>64</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -509,9 +509,9 @@
                         <td>1</td>
                         <td>45</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>66</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -539,7 +539,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "0",
+                 "1",
                  "1"
                ]
              },
@@ -551,7 +551,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "3",
+                 "4",
                  "4"
                ]
              }
@@ -620,8 +620,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "47",
+                 "51",
+                 "48",
                  "45"
                ]
              },
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "64",
-                 "66"
+                 "66",
+                 "67",
+                 "69"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 18:05:05 2018</p>
+         Last Run: Tue Nov 13 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -702,7 +702,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -714,7 +714,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,7 +722,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -837,7 +837,7 @@
                "data":[
                  "70",
                  "71",
-                 "71"
+                 "72"
                ]
              },
              {
@@ -846,8 +846,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "48",
+                 "47",
+                 "49",
                  "51"
                ]
              }
