--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 19:05:03 2018</p>
+         Last Run: Tue Nov 13 20:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>2</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>66</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>19</td>
                         <td>WNW</td>
-                        <td>12</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,22 +46,22 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>16</td>
                         <td>WNW</td>
-                        <td>10</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>73</td>
+                        <td>3</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>13</td>
                      </tr>
                   </tbody>
@@ -162,7 +162,7 @@
                "data":[
                  "3",
                  "3",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
                  "70",
-                 "73"
+                 "76",
+                 "78"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "14",
                  "12",
-                 "10",
                  "13"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 19:05:03 2018</p>
+         Last Run: Tue Nov 13 20:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 19:05:03 2018</p>
+         Last Run: Tue Nov 13 20:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -481,13 +481,13 @@
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>2</td>
-                        <td>-2</td>
+                        <td>-1</td>
                         <td>1</td>
                         <td>51</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>66</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -497,9 +497,9 @@
                         <td>1</td>
                         <td>48</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>67</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -507,11 +507,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>1</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>69</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,7 +538,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "1",
                  "1"
                ]
@@ -622,7 +622,7 @@
                "data":[
                  "51",
                  "48",
-                 "45"
+                 "46"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "67",
-                 "69"
+                 "68",
+                 "69",
+                 "70"
                ]
              }
            ]
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 19:05:03 2018</p>
+         Last Run: Tue Nov 13 20:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -698,7 +698,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -725,7 +725,7 @@
                         <td>72</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>51</td>
                      </tr>
                   </tbody>
@@ -835,8 +835,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
                  "71",
+                 "72",
                  "72"
                ]
              },
