--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 20:05:05 2018</p>
+         Last Run: Tue Nov 13 21:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,9 +34,9 @@
                         <td>2</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>WNW</td>
                         <td>14</td>
                      </tr>
@@ -44,11 +44,11 @@
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
-                        <td>-3</td>
+                        <td>-4</td>
                         <td>3</td>
-                        <td>76</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>WNW</td>
                         <td>12</td>
                      </tr>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>78</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>W</td>
-                        <td>13</td>
+                        <td>14</td>
+                        <td>WNW</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "76",
-                 "78"
+                 "68",
+                 "74",
+                 "76"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "14",
                  "12",
-                 "13"
+                 "10"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 20:05:05 2018</p>
+         Last Run: Tue Nov 13 21:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -264,7 +264,7 @@
                         <td>82</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 20:05:05 2018</p>
+         Last Run: Tue Nov 13 21:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -499,7 +499,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -632,7 +632,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "68",
-                 "69",
+                 "68",
                  "70"
                ]
              }
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov 13 20:05:05 2018</p>
+         Last Run: Tue Nov 13 21:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -710,7 +710,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>72</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -836,7 +836,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "71",
-                 "72",
+                 "71",
                  "72"
                ]
              },
